# diceroller

./: README.md  diceroller.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/diceroller/: cli.py  core.py
tests/: test_diceroller.py
